    duplicate scanning on preconfigure/setup (bsb).
  * Remove bashism from debian/config (by GCS, closes: #240643).
  * Mention mm_cfg.MTA=None in README.EXIM (closes: #240295), also fix
    pathes to reflect Debian choices (bsb).
  * Include add_virtualdomain call in mm_cfg.py (closes: #238509), while
    at it regroup options and add comments (bsb).

 -- Siggy Brentrup <bsb@debian.org>  Tue, 30 Mar 2004 01:38:02 +0200

mailman (2.1.4-2) unstable; urgency=low

  * Brown bag release.
  * Move that pid file.  Now.  (closes: #226152)
  * Switch to dpatch
  * Don't traceback when using admin password (closes: #233161)
  * Fix up MAILMAN_OWNER. (closes: #232452, #232273)
  * Make the postinst a lot less chatty (closes: #232546)
  * Update Spanish debconf translation (closes: #233693)
  * Update pt_BR debconf translation (closes: #228123)
  * Add Hungarian debconf translation (by GCS)
  * Wait for termination on restart|force-reload (by GCS,
    closes: #231468, #204006, #224012)
  * Fix --purge, thanks to Lionel Elie Mamane and Tollef (by GCS)
  * Revert gate_news changes (by GCS, closes: #237006)
  * Fix messages/de/LC_MESSAGES/mailman.po for now, but forward to upstream;
    patch from Ralf Doeblitz <r.doeblitz@asco.de> (closes: #233048)
  * Added german debconf translation (bsb).
  * Added myself to Uploaders (bsb).
  * Bumped 'Standards Version' to 3.6.1 (bsb, GCS's commit was lost during
    the alioth move).
  * Added catalan debconf translation from Aleix Badia i Bosch <abadia@ica.es>
    (by GCS, closes: #236666)
  * Change obsolete MAILMAN_OWNER to MAILMAN_SITE_LIST, note that this
    invalidate #232273 and #232452 (by GCS, closes: #235913)
  * Add debconf question for languages supported at a site reducing space
    required in /etc and chattyness (bsb, closes: #232005).
  * Backed out hack in 05_config_list_member_options.dpatch since it
    breaks config_list in mm 2.1.4 (bsb, closes: #231967).